# batconcalc

./: .gitignore  README.md  battery-consume-calc.py  battery-consume-calc.spec  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller_linux.yml  pyinstaller_win.yml  pyinstaller_winlinx.yml  release.yml
src/batconcalc/: batconcalc.py  helpers.py
